feat: god forbit I doubt Gradle again: Full Gradle pipeline for compiling Rust and making Java FFI interloop